--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,800");
 body, html {
-  height: 100%; }
+  height: 100%;
+  font-family: 'Montserrat'; }
 
 .parallax {
   /* The image used */
@@ -14,5 +16,58 @@ body, html {
   position: fixed;
   height: 100vh;
   width: 100vw; }
+
+section .container:first-child {
+  padding-top: 100px; }
+
+section .container:last-child {
+  padding-bottom: 100px; }
+
+.map-bg {
+  background: url("../assets/map-trace.png"); }
+
+.list-group {
+  box-shadow: none; }
+
+.list-group-item {
+  border: none; }
+
+.wrapper {
+  position: relative; }
+  .wrapper section {
+    position: relative; }
+    .wrapper section:nth-child(n+3):nth-last-child(n) {
+      background: white; }
+    .wrapper section article {
+      width: 50%;
+      margin: 0 auto;
+      padding: 2em 0; }
+      .wrapper section article p {
+        margin-bottom: 1em; }
+        .wrapper section article p:last-of-type {
+          margin-bottom: 0; }
+    .wrapper section:after {
+      content: "";
+      display: block;
+      position: absolute;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      height: 40em;
+      width: 100%;
+      background: linear-gradient(90deg, rgba(1, 0, 21, 0.7), rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-attachment: fixed; }
+  .wrapper h1 {
+    font-size: 60px; }
+  .wrapper h2 {
+    font-size: 40px; }
+  .wrapper #title p {
+    font-size: 20px;
+    letter-spacing: .02em; }
 
 /*# sourceMappingURL=style.css.map */
