--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,8 @@ body, html {
   height: 100vh;
   width: 100vw; }
 
-section .container:first-child {
-  padding-top: 100px; }
-
-section .container:last-child {
+section .container {
+  padding-top: 100px;
   padding-bottom: 100px; }
 
 .map-bg {
@@ -54,9 +52,9 @@ section .container:last-child {
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
-      height: 40em;
+      height: 50em;
       width: 100%;
-      background: linear-gradient(90deg, rgba(1, 0, 21, 0.7), rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
+      background: linear-gradient(90deg, rgba(0, 7, 30, 0.9), rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -66,8 +64,13 @@ section .container:last-child {
     font-size: 60px; }
   .wrapper h2 {
     font-size: 40px; }
+  .wrapper .tracked {
+    letter-spacing: .1em; }
+  .wrapper #title {
+    padding-top: 4.5rem;
+    /*to offset content for the fixed navigation*/ }
   .wrapper #title p {
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: .02em; }
 
 /*# sourceMappingURL=style.css.map */
