--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,7 +23,7 @@ body, html {
 }
 
 section .container{
-    padding-top: 100px;
+    padding-top: 70px;
     padding-bottom: 100px;
 }
 
@@ -39,8 +39,16 @@ section .container{
     background: url('../assets/map-trace.png');
 }
 
+.map-background{
+    background: url("../assets/pasadena-map.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
 
-
+.map-background-02{
+    background: url("../assets/berkeley-map.png");
+    background-repeat: no-repeat;
+}
 
 .list-group{
     box-shadow: none;
@@ -78,7 +86,7 @@ section .container{
       height: 50em;
       width: 100%;
       background:     
-        linear-gradient(90deg, rgba(0, 7, 30, 0.9), rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
+        linear-gradient(90deg, #232D4C, rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -159,7 +167,26 @@ section .container{
   backface-visibility: hidden;
 }
 
-.bounce-up.in-view{
+/*bounce up animation for the subject*/
+
+.bounce-down{
+  opacity: 0;
+  -moz-transition: all 700ms ease-out;
+  -webkit-transition: all 700ms ease-out;
+  -o-transition: all 700ms ease-out;
+  transition: all 700ms ease-out;
+  -moz-transform: translate3d(0px, -100px, 0px);
+  -webkit-transform: translate3d(0px, -100px, 0px);
+  -o-transform: translate(0px, -100px);
+  -ms-transform: translate(0px, -100px);
+  transform: translate3d(0px, -100, 0px);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.bounce-up.in-view,
+.bounce-down.in-view{
   opacity: 1;
   -moz-transform: translate3d(0px, 0px, 0px);
   -webkit-transform: translate3d(0px, 0px, 0px);
@@ -168,4 +195,35 @@ section .container{
   transform: translate3d(0px, 0px, 0px);
 }
 
+
+/*fade in animation for the subject*/
+
+.fade-in{
+  opacity: 0;
+  -moz-transition: all 700ms ease-out;
+  -webkit-transition: all 700ms ease-out;
+  -o-transition: all 700ms ease-out;
+  transition: all 700ms ease-out;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.fade-in.in-view{
+  opacity: 1;
+}
+
+.navbar{
+    transition: all 0.5s ease;
+}
+
+.navbar-brand{
+    padding: 0;
+}
+
+
+.media-object{
+    max-width: 40px;
+    padding: 2px 6px 4px 0;
+}
 
