more sass and fixing images

--- a/sass/bootstrap-4.0.0/scss/_variables.scss
+++ b/sass/bootstrap-4.0.0/scss/_variables.scss
@@ -36,12 +36,12 @@ $grays: map-merge((
 
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
+$purple:  #232D4C;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #63A989;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
