--- a/sass/bootstrap-4.0.0/scss/_variables.scss
+++ b/sass/bootstrap-4.0.0/scss/_variables.scss
@@ -35,13 +35,13 @@ $grays: map-merge((
 ), $grays);
 
 $blue:    #007bff !default;
-$indigo:  #6610f2 !default;
+$indigo:  #014866 ;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #63A989 ;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
