--- a/sass/style.scss
+++ b/sass/style.scss
@@ -213,6 +213,25 @@ body, html {
   opacity: 1;
 }
 
+.img-bottom-layer{
+  position:relative;
+  top:0;
+  left:0;
+  left:0;
+  right:0;
+  margin:auto;
+}
+
+.img-layer{
+  position:absolute;
+  top:0;
+  left:0;
+  left:0;
+  right:0;
+  margin:auto;
+}
+
+
 /***********************************
 5. Navigation
 ***********************************/
