--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,37 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,800');
-
-@font-face {
-  font-family: "Montserrat";
-  font-weight: bold;
-  src: url("../fonts/Montserrat/Montserrat-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  font-weight: 500;
-  src: url("../fonts/Montserrat/Montserrat-Medium.ttf");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat/Montserrat-Regular.ttf");
-}
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,800');
+@import "bootstrap-4.0.0/scss/bootstrap.scss";
 /***********************************
 Table of Contents
 
 1. Typography
-2. Buttons
-3. Backgrounds
-4. Animation
-5. Navigation
-6. Lists
-7. Cards
+2. Logo
+3. Buttons
+4. Backgrounds
+5. Animation
+6. Navigation
+7. Lists
+8. Cards
+9. Parallax
 
 ***********************************/
 
-
-@import "bootstrap-4.0.0/scss/bootstrap.scss";
 
 
 /***********************************
@@ -85,9 +68,31 @@ body, html {
 
 }
 
+/***********************************
+2. Logo
+***********************************/
+
+
+#logo{
+  min-height: 27px;
+  width: 212px;
+  background-image: url('../assets/logo.svg');
+  background-repeat: no-repeat;
+}
+
+
+.navbar-dark #logo{
+  min-height: 27px;
+  width: 212px;
+  background-image: url('../assets/logo-light.svg');
+  background-repeat: no-repeat;
+}
+
+
+
 
 /***********************************
-2. Buttons
+3. Buttons
 ***********************************/
 
 
@@ -98,7 +103,7 @@ body, html {
 
 
 /***********************************
-3. Backgrounds
+4. Backgrounds
 ***********************************/
 
 
@@ -151,7 +156,7 @@ body, html {
 }
 
 /***********************************
-4. Animation
+5. Animation
 ***********************************/
 
 /*bounce up animation for the subject*/
@@ -200,10 +205,7 @@ body, html {
 
 .fade-in{
   opacity: 0;
-  -moz-transition: all 700ms ease-out;
-  -webkit-transition: all 700ms ease-out;
-  -o-transition: all 700ms ease-out;
-  transition: all 700ms ease-out;
+  @include transition(all 700ms ease-out);
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -232,8 +234,28 @@ body, html {
 }
 
 
+/*keep a certain width.Also setting children positioning */
+.lock-map-animation{
+  max-width:400px;
+  margin:auto;
+
+  img{
+    &:first-child{
+      z-index:2;
+    }
+    &:nth-child(2){
+      z-index:1;
+    }
+    &:nth-child(3){
+      z-index:3;
+    }
+  }
+}
+
+
+
 /***********************************
-5. Navigation
+6. Navigation
 ***********************************/
 
 
@@ -255,7 +277,7 @@ body, html {
 }
 
 /***********************************
-6. Lists
+7. Lists
 ***********************************/
 
 .list-group{
@@ -269,7 +291,7 @@ body, html {
 
 
 /***********************************
-7. Cards
+8. Cards
 ***********************************/
 
 
@@ -278,34 +300,23 @@ body, html {
 }
 
 
+/***********************************
+9. Parallax
+***********************************/
 
-
-.parallax {
-    /* The image used */
-    background-image: url('../assets/child-taking-photo.png');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-}
 
 section .container{
     padding-top: 70px;
     padding-bottom: 100px;
 }
 
-@include media-breakpoint-down(lg) {
+@include media-breakpoint-down(sm) {
   section .container{
     padding-top: 50px;
     padding-bottom: 70px;
+  }
+  #title{
+    height: 37em;
   }
 }
 
@@ -323,23 +334,11 @@ section .container{
   position: relative;
   section {
     position: relative;
-    article {
-      width: 50%;
-      margin: 0 auto;
-      padding: 2em 0;
-      p {
-        margin-bottom: 1em;
-        &:last-of-type {
-          margin-bottom: 0;
-        }
-      }
-    }
-    &:not(:last-child):after {
+    &.before-parallax-splash:after {
       content: "";
       display: block;
       position: absolute;
       background-attachment: fixed;
-      background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
       height: 50em;
@@ -354,52 +353,31 @@ section .container{
       background-size: cover;
       background-attachment: fixed;
       background-position: calc(70%) center;
-      
     }
   }
-
-    #share::after {
-      background:     
-        linear-gradient(90deg, $indigo, rgba(6, 0, 104, 0)), url("../assets/child-taking-photo.png") no-repeat;
-      -webkit-background-size: cover;
+}
+@include media-breakpoint-down(sm) {
+  .wrapper {
+    section.before-parallax-splash:after {
+      content: "";
+      display: block;
+      position: absolute;
+      background-attachment: fixed;
+      background-position: center center;
+      background-repeat: no-repeat;
+      height: 50em;
+      width: 100%;
+      background: 
+        linear-gradient(90deg, rgba(1, 72, 102, .6), rgba(1, 72, 102, .6)), 
+        url("../assets/bubble.png") no-repeat,
+        url("../assets/child-taking-photo.png") no-repeat;
+       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
       background-attachment: fixed;
-    }
-
-}
-
-#logo{
-  min-height: 27px;
-  width: 212px;
-  background-image: url('../assets/logo.svg');
-  background-repeat: no-repeat;
-}
-
-
-.navbar-dark #logo{
-  min-height: 27px;
-  width: 212px;
-  background-image: url('../assets/logo-light.svg');
-  background-repeat: no-repeat;
-}
-
-
-.lock-map-animation{
-  max-width:400px;
-  margin:auto;
-
-  img{
-    &:first-child{
-      z-index:2;
-    }
-    &:nth-child(2){
-      z-index:1;
-    }
-    &:nth-child(3){
-      z-index:3;
-    }
-  }
+      background-position: calc(70%) center;
+      }
+  }   
 }
 
